--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@ html {
   --main-background-color: #ffffff;
   --sec-background-color: #2f303a;
   --add-background-color: #f5f4fa;
+  --animation-duration: 52000ms;
+  --animation-type: linear;
 }
 
 .container {
@@ -63,24 +65,32 @@ ul {
 
 .current-link {
   position: relative;
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-
-  color: var(--accent-color);
 }
 
 .current-link::after {
   content: "";
+
   position: absolute;
   bottom: 0;
   left: 0;
+  display: block;
   width: 100%;
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
-}
+  opacity: 0;
 
+  transition: opasity var(--animation-duration) var(--animation-type);
+}
+.header-link::after,
+.current-link:hover::after {
+  opacity: 1;
+}
+.heade-link::after {
+  background-color: var(--accent-color);
+}
 a {
   display: block;
   margin: 0;
@@ -157,11 +167,9 @@ address {
 .site-nav-link {
   margin-right: 50px;
   color: var(--title-text-color);
-
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--animation-duration) var(--animation-type);
 }
+.header-link,
 .site-nav-link :hover,
 .site-nav-link :focus {
   color: var(--accent-color);
@@ -198,14 +206,14 @@ address {
 }
 
 .email-icon {
-  width: 16px;
-  height: 12px;
+  width: 20px;
+  height: 16px;
   margin-right: 10px;
   fill: currentColor;
 }
 .phone-icon {
-  width: 10px;
-  height: 16px;
+  width: 15px;
+  height: 22px;
   margin-right: 10px;
   fill: currentColor;
 }
@@ -621,7 +629,6 @@ address {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .works-list-item:hover .work-overlay {
   transform: translateY(-100%);
 }
